Added french traduction

--- a/lang/en.html
+++ b/lang/en.html
@@ -68,7 +68,8 @@
         <div class="language-dropdown">
             <select id="languageSelector" onchange="redirectToLanguage()">
                 <option value="en">English</option>
-                <option value="es">Español</option>
+                <option value="es">Spanish</option>
+                <option value="fr">French</option>
             </select>
         </div>
         
