--- a/lang/es.html
+++ b/lang/es.html
@@ -69,6 +69,7 @@
             <select id="languageSelector" onchange="redirectToLanguage()">
                 <option value="es">Español</option>
                 <option value="en">English</option>
+                <option value="fr">Francés</option>
             </select>
         </div>
         
