--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
         
         <div class="language-dropdown">
             <select id="languageSelector" onchange="redirectToLanguage()">
-                <option value="es"> Español</option>
-                <option value="en"> English</option>
+                <option value="es">Español</option>
+                <option value="en">English</option>
+                <option value="fr">Francés</option>
             </select>
         </div>
 
